--- a/todolist/tudolist.html
+++ b/todolist/tudolist.html
@@ -31,7 +31,7 @@
         Copyright &copy; 2014 todolist.cn
     </footer>
     <script src="js/local.js"></script>
- <script src="js/main.js"></script>
+ <script src="js/main2.js"></script>
 </body>
 
 </html>
