--- a/applyMiddleware .html
+++ b/applyMiddleware .html
@@ -10,7 +10,7 @@
 <script src="https://cdn.bootcss.com/redux/4.0.1/redux.min.js"></script>
 <script src="https://cdn.bootcss.com/jquery/3.4.0/jquery.min.js"></script>
 <script>
-var {combineReducers,createStore} = Redux;
+var {combineReducers,createStore,applyMiddleware} = Redux;
 var [ADD_NOTE,DELETE_NOTE] = ["ADD_NOTE","DELETE_NOTE"]
 function notes(state = [ ], action){
     //每一次的操作无论是添加、删除还是初始化，全部的笔记内容会被重新更新一次
@@ -39,20 +39,22 @@ function notes(state = [ ], action){
     }
 }
 
+
 const rootReducer = combineReducers({ notes });
 const store =  createStore(rootReducer);
+
+
 var addaction ={
     type:ADD_NOTE,
     id:"222",
     title:"nnn",
     note:"3434343"
 }
-store.subscribe(function(t){
+store.subscribe(function(){
     console.log("我变了")
-    console.log(t)
 })
-// console.log(store.getState().notes)
 store.dispatch(addaction)
+
 
 
 </script>
