测试vuex单独使用的案例

--- a/todolist/tudolist.1.html
+++ b/todolist/tudolist.1.html
@@ -7,7 +7,9 @@
     <title>ToDoList—最简单的待办事项列表</title>
     <link rel="stylesheet" href="css/index.css">
     <script src="js/jquery.min.js"></script>
-    <script src="https://cdn.bootcss.com/vuex/3.1.0/vuex.min.js"></script>
+    
+    <script src="https://cdn.bootcss.com/vue/2.6.10/vue.min.js"></script>
+    <script src="https://cdn.bootcss.com/vuex/3.1.0/vuex.js"></script>
 </head>
 
 <body>
@@ -30,7 +32,7 @@
     <footer>
         Copyright &copy; 2014 todolist.cn
     </footer>
-    <script src="js/local.js"></script>
+ <script src="js/local.js"></script>
  <script src="js/v.js"></script>
 </body>
 
